--- a/style.css
+++ b/style.css
@@ -296,8 +296,6 @@ h1{
 
 /*-------Calculate BMI-----------*/
 .sub-header{
-    height: 60vh;
-    width: 100%;
     background-image: url(images/hh2.jpg);
     background-position: center;
     background-size: cover;
@@ -305,105 +303,147 @@ h1{
     color: #fff;
 }
 .sub-header h1{
+    padding-top: 80px;
+    padding-bottom: 50px;
     margin-top: 100px;
 }
 
 .Calculate-BMI{
-    width: 80%;
+    width: 100%;
+    height: 100%;
     margin: auto;
-    padding-top: 80px;
-    padding-bottom: 50px;
+
 }
 .BMI-col{
-    width: auto;
-    background-position: center;
-    background-size: cover;
-    text-align: center;
+    min-height: 100vh;
+    width: 100%;
+    background-image: url(images/bmi2.jpg);
+    /* background-position: center; */
+    background-size: 100% 100%;
+    text-align:left;
     color: #fff;
 }
 
 .BMI-col h1{
-    padding-top: 10px;
+    padding-top: 80px;
+    text-align:center;
 }
 .BMI-col p{
-    padding: 15px 0 25px;
+    padding-top: 160px;
+    padding-bottom: 50px;
+    padding-left: 180px;
+    padding: 15px 85px 25px;
+    color:#161414;
+    text-align: left;
+
 }
 
 .red-btn{
-    border: 1px solid #f3f022;
+    
+    align-content: left;
+    border: 1px solid #044901;
     background:transparent;
-    color: violet;
+    color: rgb(0, 0, 0);
     border-radius: 20px;
 }
 
 .red-btn hover{
-    color: white;
+
+    color: rgb(2, 68, 7);
 }
+
 
 /*-------Get your meal Plan-----------*/
 .Get-mealplan{
-    width: 80%;
+    width: 100%;
+    height: 100%;
     margin: auto;
-    padding-top: 80px;
-    padding-bottom: 50px;
 }
 .meal-col{
-    flex-basis: 48%;
-    padding: 80px 2px;
-}
-.meal-col img{
+    background-image:url("images/meal.jpg");
+    min-height: 100vh;
     width: 100%;
+    background-size: 100% 100%;
+    text-align:left;
+    color: #fff;
 }
+
 .meal-col h1{
-    padding-top: 10px;
+    padding-top: 80px;
+    text-align:center;
 }
 .meal-col p{
-    padding: 15px 0 25px;
+    padding-top: 160px;
+    padding-bottom: 50px;
+    padding-left: 180px;
+    padding: 15px 85px 25px;
+    color:#161414;
+    text-align: left;
+
 }
 
 /*-------Get your Excersice Plan-----------*/
 .Excersice-Plan{
-    width: 80%;
+    width: 100%;
+    height: 100%;
     margin: auto;
-    padding-top: 80px;
-    padding-bottom: 50px;
 
 }
-.excersice-col{
-    flex-basis: 48%;
-    padding: 80px 2px;
+.Doc-col{
+    background-image:url("images/Doc.jpg");
+    min-height: 100vh;
+    width: 100%;
+    background-size: 100% 100%;
+    text-align:left;
+    color: #fff;
 }
-.excersice-col img{
+.Doc-col img{
     width: 100%;
 }
-.excersice-col h1{
-    padding-top: 10px;
+.Doc-col h1{
+    padding-top: 80px;
+    text-align:center;
 }
-.excersice-col p{
-    padding: 15px 0 25px;
+.Doc-col p{
+    padding-top: 160px;
+    padding-bottom: 50px;
+    padding-left: 180px;
+    padding: 15px 85px 25px;
+    color:#161414;
+    text-align: left;
 }
 
 /*--------Channel your Doctor-----------*/
 
 .Excersice-Plan{
-    width: 80%;
+    width: 100%;
+    height: 100%;
     margin: auto;
-    padding-top: 80px;
-    padding-bottom: 50px;
 
 }
 .excersice-col{
-    flex-basis: 48%;
-    padding: 80px 2px;
+   
+    background-image:url("images/workout.jpg");
+    min-height: 100vh;
+    width: 100%;
+    background-size: 100% 100%;
+    text-align:left;
+   
 }
 .excersice-col img{
     width: 100%;
 }
 .excersice-col h1{
-    padding-top: 10px;
+    padding-top: 80px;
+    text-align:center;
 }
 .excersice-col p{
-    padding: 15px 0 25px;
+    padding-top: 160px;
+    padding-bottom: 50px;
+    padding-left: 180px;
+    padding: 15px 85px 25px;
+    color:#161414;
+    text-align: left;
 }
 
 /*------------cal-----*/
